include $(top_srcdir)/gnome-doc-utils.make

DOC_MODULE = epiphany
DOC_ENTITIES = legal.xml
DOC_LINGUAS = ca cs bg de el en_GB es eu fi fr it ja oc nl ru sv uk zh_CN
DOC_FIGURES = \
	figures/ephy-addressbar-smartbookmark-screenshot.png	\
	figures/ephy-bookmarkbar-smartbookmark-screenshot.png	\
	figures/ephy-history-window-screenshot.png		\
	figures/ephy-screenshot.png

dist-hook: doc-dist-hook
