@YELP_HELP_RULES@

HELP_ID = epiphany

HELP_MEDIA = \
	media/epiphany-3-8.png \
	media/private-browsing-3-8.png \
	media/web-browser.png

HELP_FILES = \
	index.page \
	introduction.page \
	legal.xml \
	bookmark.page \
	bookmark-add.page \
	bookmark-delete.page \
	bookmark-edit.page \
	bookmark-smart.page \
	bookmark-topic.page \
	browse-local.page \
	browse-private.page \
	browse-web.page \
	browse-webapps.page \
	cookies.xml \
	data.page \
	data-cookies.page \
	data-passwords.page \
	history.page \
	history-delete.page \
	pref.page \
	pref-cookies.page \
	pref-css.page \
	pref-downloads.page \
	pref-font.page \
	pref-passwords.page

HELP_LINGUAS = cs de el es hu pt_BR

-include $(top_srcdir)/git.mk
