@YELP_HELP_RULES@

HELP_ID = epiphany

HELP_FILES = \
	index.page \
	introduction.page \
	legal.xml \
	bookmark.page \
	bookmark-add.page \
	bookmark-delete.page \
	bookmark-edit.page \
	bookmark-smart.page \
	bookmark-topic.page \
	browse-local.page \
	browse-private.page \
	browse-tab.page \
	browse-web.page \
	browse-webapps.page \
	browse-webapps-del.page \
	cert.page \
	cookies.xml \
	data-cookies.page \
	data-passwords.page \
	history.page \
	history-delete.page \
	keyboard-shortcut.page \
	pref.page \
	pref-cookies.page \
	pref-css.page \
	pref-downloads.page \
	pref-do-not-track.page \
	pref-font.page \
	pref-passwords.page \
	prob-restore-closed-page.page \
	proxy.page

HELP_MEDIA = \
	media/epiphany-3-12.png \
	media/private-browsing-3-12.png \
	media/web-browser.png

HELP_LINGUAS = cs de el es fr hu ko pt_BR ru

-include $(top_srcdir)/git.mk
