help_files = [
  'index.page',
  'introduction.page',
  'legal.xml',
  'browse-local.page',
  'browse-private.page',
  'browse-tab.page',
  'browse-web.page',
  'browse-webapps.page',
  'browse-webapps-del.page',
  'cert.page',
  'cookies.xml',
  'data-cookies.page',
  'data-passwords.page',
  'history.page',
  'history-delete.page',
  'keyboard-shortcut.page',
  'pref.page',
  'pref-cookies.page',
  'pref-css.page',
  'pref-downloads.page',
  'pref-do-not-track.page',
  'pref-font.page',
  'pref-passwords.page',
  'prob-restore-closed-page.page',
  'proxy.page'
]

help_media = [
  'media/epiphany-3-12.png',
  'media/private-browsing-3-12.png',
  'media/web-browser.png'
]

help_linguas = [
  'cs',
  'de',
  'el',
  'es',
  'fr',
  'hu',
  'ko',
  'pt_BR',
  'ru',
  'sv'
]

gnome.yelp(meson.project_name(),
  sources: help_files,
  media: help_media,
  languages: help_linguas,
)
