help_files = [
  'index.page',
  'introduction.page',
  'legal.xml',
  'browse-local.page',
  'browse-private.page',
  'browse-tab.page',
  'browse-web.page',
  'browse-webapps.page',
  'browse-webapps-del.page',
  'cert.page',
  'cookies.xml',
  'data-cookies.page',
  'data-passwords.page',
  'data-personal-data.page',
  'history.page',
  'history-delete.page',
  'pref-cookies.page',
  'pref-css.page',
  'pref-downloads.page',
  'pref-font.page',
  'pref-passwords.page',
  'pref-mouse-gestures.page',
  'prob-restore-closed-page.page',
  'proxy.page'
]

help_media = [
  'media/epiphany-plain-3-36.png',
  'media/epiphany-private-3-36.png',
  'media/org.gnome.Epiphany.svg'
]

gnome.yelp(meson.project_name(),
  sources: help_files,
  media: help_media,
)
